<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp"
    tools:context=".activities.shared.ProfileActivity">

    <LinearLayout
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/headerTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="TextView"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.055" />

        <TextView
            android:id="@+id/profileNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="Name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/profileNameEditTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:inputType="text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/profileUsernameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="Username"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/profileUsernameEditTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:inputType="text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/profileEmailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="Email Id"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/profileEmailEditTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/profilePhoneNumberTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="Phone Number"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/profilePhoneNumberEditTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:inputType="phone"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/profileAgeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="Age"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/profileAgeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:inputType="number"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/profileGenderTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="Gender"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/profileGenderEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:inputType="text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/profileAddressTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="Address"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/profileAddressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:inputType="textMultiLine"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/profilePasswordTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="Password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/profilePasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="20sp" />

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextPassword"
            android:layout_marginTop="20dp"
            android:text="Save" />

    </LinearLayout>


</ScrollView>