<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".activities.seniorcitizen.SeniorBookVolunteerActivity">

    <TextView
        android:id="@+id/current_bookings"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="center"
        android:text="Schedule a volunteer"
        android:textSize="24dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/selectedDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Selected Date:"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="10dp"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/calendarIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="calendar"
            android:focusable="true"
            android:src="@drawable/calendar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/selectedTimePeriodTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Selected Time Period:"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/timePeriodSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/seniorvolunteerRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/bookVolunteerBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:text="Book Volunteer" />

</LinearLayout>
