...
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/pdfHealthRecordRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="530dp"
        android:layout_below="@id/titleTextView"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:padding="8dp" />

    <Button
        android:id="@+id/pickPdfHealthRecordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Upload Record"
        tools:layout_editor_absoluteX="165dp"
        tools:layout_editor_absoluteY="321dp"
        android:layout_gravity="center"
...
