...
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            android:text="File Name"/>

        <!-- Delete Icon -->
        <ImageView
            android:id="@+id/deleteIconImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/outline_delete_outline_24"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"/>

...
